--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,167 @@
-.App {
-  text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    background-color: rgb(220, 220,220);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.center{
+    display: flex;
+    margin: 0 auto;
+    max-width: 1100px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header{
+    background-color: white;
+    border-bottom: 2px solid rgb(230, 230, 230);
+    padding: 10px 0;
 }
 
-.App-link {
-  color: #61dafb;
+.header_logo{
+    width: 50%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header_loginForm{
+    width: 50%;
+    text-align: right;
+}
+
+.header_loginForm form{
+    display: inline-block;
+}
+
+.header_loginForm input[type=text],
+.header_loginForm input[type=password]{
+    width: 180px;
+    height: 20px;
+    margin-right: 5px;
+    border: 1px solid #ccc;
+    padding-left: 10px;
+}
+
+.header_loginForm input[type=submit]{
+    background-color: #0095f6;
+    color: white;
+    border: 0;
+    height: 20px;
+    cursor: pointer;
+    font-size: 14px;
+    padding: 0px 10px;
+    border-radius: 5px;
+}
+
+.btn_CreateAccount{
+    display: inline-block;
+}
+
+.btn_CreateAccount a{
+    font-size: 14px;
+    margin: 0 10px;
+}
+
+.header_loginInfo{
+    text-align: right;
+    width: 50%;
+}
+
+.header_loginInfo a{
+    margin: 0 10px;
+    background-color: #0095f6;
+    color: white;
+    cursor: pointer;
+    font-size: 14px;
+    padding: 8px 10px;
+    border-radius: 20px;
+    text-decoration: none;
+}
+
+.modalCreateAccount,
+.modalUpload{
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.formCreateAccount,
+.formUpload{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+}
+
+.formCreateAccount input,
+.formUpload input{
+    width: 100%;
+    height: 30px ;
+    margin-bottom: 5px;
+    padding-left: 10px;
+    border: 1px solid #ccc;
+}
+
+.formCreateAccount input[type='submit'],
+.formUpload input[type='submit']{
+    background-color: #0095f6;
+    cursor: pointer;
+    color: white;
+}
+
+.closeModalCreateAccount,
+.closeModalUpload{
+    position: absolute;
+    right: -10px;
+    top: -10px;
+    cursor: pointer;
+    text-align: center;
+    color: white;
+    line-height: 30px;
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+    background-color: red;
+}
+
+.postSingle{
+    background-color: white;
+    max-width: 700px;
+    margin: 10px auto;
+}
+
+.postSingle img{
+    width: 100%;
+}
+
+.postSingle p{
+    padding: 10px;
+}
+
+.postSingle form{
+    padding: 20px;
+}
+
+.postSingle textarea{
+    width: 100%;
+    height: 120px;
+    border: 1ps solid #ccc;
+    padding: 10px;
+}
+
+.postSingle input[type=submit]{
+    background-color: #0095f6;
+    cursor: pointer;
+    color: white;
+    border: 0;
+    padding: 8px 10px;
 }
